fix issue where black fill was carrying over on safari on the Large 'L'. Fix issue where the arrow on the about me button was incorrectly placed in firefox. Add scrolling underbar on hover and unhover to nav links

--- a/src/App.css
+++ b/src/App.css
@@ -32,12 +32,39 @@ canvas {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes Underline {
   from {
-    transform: rotate(0deg);
+    transform: translate(-100%);
   }
   to {
-    transform: rotate(360deg);
+    transform: translate(0%);
+  }
+}
+
+@keyframes Underline2 {
+  from {
+    transform: translate(-200%);
+  }
+  to {
+    transform: translate(-100%);
+  }
+}
+
+@keyframes Underline3 {
+  from {
+    transform: translate(0);
+  }
+  to {
+    transform: translate(101%);
+  }
+}
+
+@keyframes Underline4 {
+  from {
+    transform: translate(-100%);
+  }
+  to {
+    transform: translate(101%);
   }
 }
 
@@ -53,34 +80,6 @@ canvas {
   font: 16px/1.5 -apple-system, BlinkMacSystemFont, avenir next, avenir,
     helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
   background: white;
-}
-
-.box {
-  position: absolute;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  color: #fff;
-  background: #9e1717;
-  /* border-radius: 5px; */
-  box-shadow: 0px 30px 100px -10px rgba(0, 0, 0, 0.14);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.circle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 200%;
-  height: 200%;
-  /* border-radius: 50%; */
-  background: #1c1d25;
-  will-change: transform;
-  justify-content: center;
-  align-items: center;
-  display: flex;
 }
 
 .devName {
@@ -104,10 +103,36 @@ canvas {
   height: 100%;
   position: relative;
   z-index: 5;
-  display: inline-block; /* <= shrinks container to image size */
+  display: inline-block;
   max-width: 610px;
   width: 100%;
   margin-left: 2rem;
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.header_content {
+  position: relative;
+
+  animation: 0.1s ease-out 0s 1 slideInFromTop;
+}
+
+.header_content .letter {
+  max-height: 60px;
+  height: 100%;
+  position: relative;
+  z-index: 5;
+  display: inline-block;
+  max-width: 100px;
+  width: 100%;
+  margin-left: 0;
 }
 
 .relative {
@@ -125,6 +150,16 @@ canvas {
   height: 100vh;
 
   z-index: 3;
+}
+
+a {
+  text-decoration: none;
+}
+
+@media only screen and (min-width: 75em) {
+  .header_content {
+    width: 1170px;
+  }
 }
 
 @media only screen and (max-width: 1599px) {
